--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,15 @@ server.port=8080
 server.servlet.context-path=/dossier
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/dossier?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root1
-spring.datasource.password=Dzee2015$
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/dossier?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root1}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Dzee2015$}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:none}
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.sql.init.mode=${SPRING_SQL_INIT_MODE:never}
+spring.jpa.defer-datasource-initialization=${SPRING_JPA_DEFER_DATASOURCE_INITIALIZATION:false}
